# devops-scripts

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  check_health.py  cli_template.py  fix_pre_commit.py  get_dns_records.py  pyproject.toml  quick_fix.py  requirements.txt  set_aws_creds.py  test_api.py
config/: aws-defaults.json  logging.yaml  monitoring-thresholds.json
examples/: README_DNS_LEARNING.md  dns-learning.py  docker-health-check.py
k8s/: check-security.sh  monitor-resources.sh  scrape-pod-errors.sh
k8s/daemonset-demo/: ds-demo.yaml
kubernetes/scripts/: check-security.sh
python/: ExtractK8sCACertificate.py  aks_sys_state.py  aws_inspector.py  check_health.py  check_vm_capacity.py  docker_utils.py  get_kubectl_info.py  git_analyzer.py  har-viewer.py  log_analyzer.py  oauth-demo.py  system_monitor.py  test_web_server.py  trace-runner.py
scripts/: aks_sys_state.py  cli_template.py  custom_json_encoder.py  har-viewer.py  test_api.py  test_web_server.py  trace-runner.py  walk_directory.py
src/devops_tools/: __init__.py  _version.py
src/devops_tools/aws/: __init__.py  credentials.py  inspector.py
src/devops_tools/common/: __init__.py  apim_key_manager.py  utils.py
src/devops_tools/containers/: __init__.py  docker_manager.py  docker_utils_legacy.py
src/devops_tools/git/: __init__.py  analyzer.py
src/devops_tools/monitoring/: __init__.py  azure_openai_tpm_rpm_simulator.py  log_analyzer.py  system_monitor.py  trace_runner.py
src/devops_tools/web/: __init__.py  har_viewer.py  test_server.py
tests/: __init__.py  conftest.py
tests/unit/: test_docker_manager.py
